feat: added event rows logic